examples/test/testpolicy17708.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17708
  namespace: namespace384
spec:
  podSelector:
    matchLabels:
      key17: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value35
          key32: value47
          key47: value16
      podSelector:
        matchLabels:
          key10: value5
